--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,32 +1,68 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
 *{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: white;
-    text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 0px;
+  margin: 0px;
 }
 
-body{
-    width: 100%;
-    right: 100%; 
+:root{
+  --fonte1: 'Passion one', cursive;
+  --fonte2: 'Sriracha', cursive;
+  --cor1: black;
+  --cor2: white;
+  --cor3: #AD8317;
+  --cor4: gray;
+  --cor5: ;
 }
-header{
-    text-align: center;
 
+
+nav > a {
+  color: darkblue;
+  text-decoration: none;
+  position: relative;
+  left: 60vw;
+  line-height: 20px;
+  margin-bottom: 10px;
 }
-#logo{
+#logoF{
     width: 20%;
-    padding-right: 10%;
+    right: 20%;
+    margin-left: 10%;
+    margin-top: 1%;
 }
-a{
-    margin: 20px;
-    text-decoration: none;
-    
+
+html, body {
+  width: 100vw;
 }
-a:hover{
-    background-color: silver;
-    border-radius: 10px;
+
+header > h1 {
+  fonte-family: var(--fonte2);
+  font-variant: small-caps;
+  font-size: 7vw;
+  color: var(--cor4);
+  text-shadow: 2px 1px 1px var(--cor1);
+  padding: 70px 10px 40px 30px;
+  margin: auto;
 }
-hr{
-    box-shadow: 2px 1px 0px black;
+
+
+input {
+  background-color:yellow;
+  position: relative;
+  left: 5%;
+  width: 90%;
+  border-radius: 5px;
+  height: 40px;
+  font-family: var(--fonte1);
+  font-size: 150%;
+  color: darkblue;
 }
+input:hover {
+    background-color: darkblue;
+    color: yellow;
+    transition-duration: 0.6;
+  }
