--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,6 +7,7 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   padding: 0px;
   margin: 0px;
+  box-sizing:border-box;
   /* width: 100%;
   right: 100%; */
 }
@@ -20,21 +21,48 @@
   --cor5: ;
 }
 .logo{
-    height: 105px;
-    width: 290px;
+    min-width: 200px;
+    max-width: 290px;
+    min-height: 10px;
+    margin-left: 10%;
+    border-radius: 10px;
 }
+
 .topo{
     display: flex;
-    width: 100%;
+    max-width: infinite;
     background-color: rgb(219, 219, 219);
+    min-width: 10px;
 }
 .links{
-    display: flex;
+    display: grid;
     list-style-type: none; 
     font-size: 15px;
+    grid-gap: 10px;
     margin: auto;
-    margin-right: 30%;
+    grid-template-columns: auto auto auto auto auto;
+    margin-right: 10%;
 }
+.linkbotao{
+  border: none;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.linkbotao:hover{
+  cursor: pointer;
+}
+
+.linkbotao:active{
+  background-color: rgb(182, 182, 182);
+}
+
+.clickbotao{
+  border: none;
+  padding: 20px;
+  border-radius: 10px;
+}
+
 a{
     cursor: pointer;
     margin-left: 15%;
@@ -63,13 +91,25 @@ a{
     margin-left: .25em;
   }
 
+  /*banner*/
+
+.banner{
+  width: 80%;
+  height: 500px;
+  margin: auto;
+  display: block;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  background: url(../img/placebanner.jpg) center no-repeat;
+}
 
   /*coloco uma mensagem depois aqui preguiça*/
 
 .lista {
-  display:flex; 
-  margin:auto; 
-  width: 1125px; 
+  display: grid; 
+  margin:auto;
+  grid-template-columns: auto auto auto auto auto; 
+  max-width: 1125px; 
   margin-top: 50px;
 }
 
@@ -84,4 +124,45 @@ a{
   width:175px; 
   height:175px; 
   border-radius: 10px;
+}
+
+@media (max-width:1185px){
+  .lista{
+    grid-template-columns: auto auto auto auto;
+  }
+
+}
+
+@media (max-width:942px){
+  .lista{
+    grid-template-columns: auto auto auto;
+  }
+
+}
+
+@media (max-width:780px){
+  .lista{
+    grid-template-columns: auto auto;
+  }
+
+  .topo{
+    display:block;
+  }
+  .links{
+    margin-left: 1%;
+    margin-right: 1%;
+    grid-gap: 1px;
+  }
+}
+
+
+@media (max-width:853px){
+  .links{
+    margin-right: 0%;
+  }
+  .logo{
+    margin-left: 0%;
+    max-width: 200px;
+  }
+
 }
