--- a/css/estilo.css
+++ b/css/estilo.css
@@ -26,6 +26,7 @@
     min-height: 10px;
     margin-left: 10%;
     border-radius: 10px;
+    margin-bottom: 1px;
 }
 
 .topo{
@@ -134,6 +135,15 @@ a{
   border-radius: 10px;
 }
 
+.quemsomos{
+  margin: auto; 
+  margin-left: 10%; 
+  margin-right: 10%; 
+  margin-top: 50px; 
+  display: grid; 
+  grid-template-columns: 1fr 33%;
+}
+
 @media (max-width:1185px){
   .lista{
     grid-template-columns: auto auto auto auto;
@@ -145,6 +155,7 @@ a{
   .lista{
     grid-template-columns: auto auto auto;
   }
+
 
 }
 
